# docx-to-html

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  tools.py
