[project]
name = "docx-to-html"
version = "0.1.0"
description = ""
authors = [
    {name = "Javicle"}
]
requires-python = ">=3.14"
dependencies = [
    "python-docx (>=1.2.0,<2.0.0)"
]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
